<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/local_playlist">

    <fragment
        android:id="@+id/local_playlist"
        android:name="com.moritz.musicsyncapp.ui.localplaylist.LocalPlaylist"
        android:label="Your Songs"
        tools:layout="@layout/local_playlist_fragment" />
    <fragment
        android:id="@+id/pair_devices"
        android:name="com.moritz.musicsyncapp.ui.pairdevice.PairDeviceFragment"
        android:label="Pair Devices"
        tools:layout="@layout/fragment_pair_device" />
    <fragment
        android:id="@+id/session_playlist"
        android:name="com.moritz.musicsyncapp.ui.sessionplaylist.SessionPlaylistFragment"
        android:label="Shared Playlist"
        tools:layout="@layout/fragment_session_playlist" />
</navigation>