<resources>
    <string name="app_name">MusicSyncApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_localplaylist">Songs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pairdevices">Devices</string>
    <string name="sessionplaylist">Shared Playlist</string>
</resources>