<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flexDirection="column"
    app:justifyContent="flex_start"
    app:alignItems="center" >


    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_flexBasisPercent="50%"
        app:layout_flexGrow="1.0"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation" />


    <fragment
        android:id="@+id/mediacontroller"
        android:name="com.moritz.musicsyncapp.ui.mediacontroller.MediaControllerFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</com.google.android.flexbox.FlexboxLayout>